--- a/Assignment/bootstrap.html
+++ b/Assignment/bootstrap.html
@@ -1,23 +1,27 @@
 <html>
 <head>
 	<title>Bootstrap</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <form>
 <div class="row">
-<div class="col-md-3">
+<div class="col-md-3 border border-right-1">
 	<img src="C:\Users\khush\Desktop\Flags\India.jpg"class="rounded-circle">
 	<p style="padding-left:90px"> Khushi Vyas</p><p style="padding-left:50px">khushi123@gmail.com</p>
 </div>
 
-<div class="col-md-5">
+<div class="col-md-5 border border-right-1">
 		<h1>Profile Settings</h1>
 		<label class="control-label">Name:</label>
 		<input type="text" class="form-control" placeholder="Name" required=""><br>
+		<label class="control-label">Surname:</label>
+		<input type="text" class="form-control" placeholder="Surname" required=""><br>
 		<label class="control-label">Phone number:</label>
 		<input type="number" class="form-control" placeholder="Phone Number" required=""><br>
 		<label class="control-label">Address:</label>
