--- a/Assignment/bootstrap.html
+++ b/Assignment/bootstrap.html
@@ -19,7 +19,7 @@
 <div class="col-md-5 border border-right-1">
 		<h1>Profile Settings</h1>
 		<label class="control-label">Name:</label>
-		<input type="text" class="form-control" placeholder="Name" required=""><br>
+		<input type="text" name="user_name" class="form-control" placeholder="Name" required=""><br>
 		<label class="control-label">Surname:</label>
 		<input type="text" class="form-control" placeholder="Surname" required=""><br>
 		<label class="control-label">Phone number:</label>
